# scoot_database

./: .env  .gitignore  Cargo.toml  README.md
docs/: architecture.drawio
migrations/2021-06-04-105847_create_model/: down.sql  up.sql
scripts/: extract_game_data.sh
scripts/src/: schema.rs
src/: db.rs  lib.rs  schema.rs
src/game_data/: aoe2dat.rs  civ_tech_tree.rs  key_value.rs  mod.rs  tech_tree.rs
src/model/: building.rs  civilisation.rs  civilization.rs  help_text.rs  links.rs  mod.rs  tech.rs  tech_tree.rs  tech_tree_building.rs  tech_tree_tech.rs  tech_tree_unit.rs  unit.rs
