[package]
name = "scout_gg_backend"
version = "0.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
genie = { git = "https://github.com/SiegeEngineers/genie-rs.git", branch = "feature/aoe2de_support"}
diesel = { version = "1.4.4", features = ["postgres"] }
diesel_migrations = "1.4.0"
diesel_derives = "1.4.1"
dotenv = "0.15.0"
eyre = "0.6.5"
serde = "1.0.126"
serde_json = "1.0"
serde_derive = "1.0.126"
